--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <h1>Loganish</h1>
         <button class="button" onclick="myFunction()"><span>Toggle Dark Mode </span></button>
         <a href="meetlu.html"><button class="button" href="meetlu.html"><span>Meet Loganish Universe </span></button></a>
+        <a href="https://www.buymeacoffee.com/loganish"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a loganish plushie&emoji=🔴&slug=loganish&button_colour=5F7FFF&font_colour=ffffff&font_family=Lato&outline_colour=000000&coffee_colour=FFDD00" /></a>
     </div>
     <div id="content">
         <img src="img/ohnonetwork404.png" alt="error occured"></img>
